# cileasing-automated-tests-playwright

./: .env.example  .gitignore  DEPENDENCY_AUDIT.md  README.md  conftest.py  index.html  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: main.yml  security-audit.yml
allure-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
config/: __init__.py  settings.py
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 105dd2f34382784e.txt  10af79ecbffbe5b2.txt  10e2394927c5a484.txt  1105dccc4513f1cf.txt  1125dcaf8d1d9bc4.txt  11636652c51a9f21.txt  11bb5ef145f1c0e8.txt  11dafc4ef526eaf2.txt  127f28916bda65e4.txt  1363b728c9226f3f.txt  137c4a3e58c52d2c.txt  137f0dd15a351357.txt  13cb0150fd88e520.txt  (+507 more)
docs/: DEPENDENCY_DECISIONS.md
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
pages/: __init__.py  add_bank_details_page.py  add_emergency_contact_page.py  add_identity_page.py  base_page.py  edit_bank_details_page.py  edit_bvn_page.py  edit_emergency_contact_page.py  edit_self_service_page.py  home_page.py  login_page.py  self_service_page.py
tests_pages/: test_bvn.py  test_cases.py  test_identity.py  test_self_service_add_bank_details.py  test_self_service_emergency_contact.py  test_self_service_personal_data.py  test_user_logins.py
utils/: __init__.py  constants.py
widgets/: categories-trend.json  duration-trend.json  duration.json  environment.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+574 files in other folders)
