[project]
name = "cileasing-automated-tests"
version = "1.0.0"
description = "Playwright Test Automation Framework for CAndILeasing"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "pytest>=9.0.3",
    "pytest-playwright>=0.7.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.10",
    "mypy>=1.20.1",
]
reporting = [
    "pytest-html>=4.1.0",
    "allure-pytest>=2.15.3",
]

[tool.pytest.ini_options]
testpaths = ["tests_pages"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "smoke: Quick sanity tests",
    "regression: Full regression suite",
    "login: Login-related tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | \.pytest_cache
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.isort]
known-first-party = ["pages", "utils", "config", "tests_pages"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
